--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -7,28 +7,16 @@ templateEngineOverride: njk, md
 
 ## What you get
 
-- the Eleventy static site generator
-- access to the Visual Framework component system
+-///
 
-### Component installation
+## Dynamic file list from gulp
 
-To add a component you can use npm/Yarn or install it manually.
+This list of files is:
 
-In either case you'll need to re-run `gulp dev` to ensure the component is fully loaded.
+- Made by Gulp
+- Gulp watches for file system changes
+- On change it updates the list and tells 11ty to reload
 
-- installation: `yarn add @visual-framework/vf-logo`
-- updating: `yarn upgrade-interactive --latest`
-
-### Manual installation for customisation
-
-1. Download a pattern
-2. Copy it to `./src/components/vf-component-name`
-
-### Add your own local component
-
-You can add a custom VF-compatible component to `./src/components` and use it in
-your site.
-
-- `gulp vf-component`
-
-You'll find a `vf-sample` component there, we've used it below:
+<pre>
+{{ fileList | dump(2) }}
+</pre>
